feat(definition): Allow to CRUD AsyncAPI
API definition V4:
 - add api definition v4 classes
 - add validation annotation on model
 - introduce a common interface between v2 and v4:
   - mutualize common feature into new services
   - use v4 services when possible instead of v2 (CorsValidation, LoggingValidation, PrimlaryOwnerService, ...)
   - update unit tests
- implement unit test for v4 services
- use definition model enum for repository model

Miscellaneous:
- introduce profiles to limit modules detection
- don't analyze v4 resources hen generating openAPI descriptor